# vyatta-openvpn

./: .frlog  .gitignore  Makefile.am  README  configure.ac
debian/: README  changelog  control  copyright  lintian  rules  vyatta-openvpn.postinst.in
lib/Vyatta/OpenVPN/: Config.pm
scripts/: VyattaOVPNConfig.pm  vyatta-qos-up  vyatta-reset-client-ovpn.pl  vyatta-restart-ovpn.pl  vyatta-show-ovpn.pl  vyatta-update-ovpn.pl
templates-cfg/interfaces/openvpn/: node.def
templates-cfg/interfaces/openvpn/node.tag/authentication/: node.def
templates-cfg/interfaces/openvpn/node.tag/bridge-group/: node.def
templates-cfg/interfaces/openvpn/node.tag/description/: node.def
templates-cfg/interfaces/openvpn/node.tag/device-type/: node.def
templates-op/generate/openvpn/key/: node.def
templates-op/monitor/interfaces/openvpn/: node.def
templates-op/reset/openvpn/: node.def
templates-op/reset/openvpn/interface/: node.def
templates-op/restart/openvpn/: node.def
templates-op/restart/openvpn/interface/: node.def
templates-op/show/interfaces/openvpn/: node.def
templates-op/show/openvpn/: node.def
templates-op/show/openvpn/client/: node.def
templates-op/show/openvpn/client-status/: node.def
templates-op/show/openvpn/server/: node.def
templates-op/show/openvpn/server-status/: node.def
templates-op/show/openvpn/site-to-site/: node.def
templates-op/show/openvpn/site-to-site-status/: node.def
templates-op/show/openvpn/status/: node.def
templates-op/vpn/openvpn-key/: node.def
templates-op/vpn/openvpn-key/generate/: node.def
(+93 files in other folders)
